--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "coverage>=7.13.4",
+    "pandas>=3.0.1",
 ]
 
 [build-system]
