added pre-commit and ruff + configs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,9 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.5.1",
+    "ruff>=0.15.2",
+]
